# single-particle-tracking

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
notebooks/: example.ipynb
spt/: __init__.py  core.pyx  tracking.py
tests/: test_frame2frame.py  test_tracker.py
